--- a/Kismat App/MainViewController/Xibs/GeneralTextviewTVCell.xib
+++ b/Kismat App/MainViewController/Xibs/GeneralTextviewTVCell.xib
@@ -12,18 +12,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="100" id="KGk-i7-Jjw" customClass="GeneralTextviewTVCell" customModule="Kismat_App" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="120" id="KGk-i7-Jjw" customClass="GeneralTextviewTVCell" customModule="Kismat_App" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nZU-CV-UOM">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BGx-be-Ie7" customClass="RoundCornerView" customModule="Kismat_App" customModuleProvider="target">
-                                <rect key="frame" x="11" y="10" width="353" height="80"/>
+                                <rect key="frame" x="11" y="10" width="353" height="102"/>
                                 <subviews>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="HDl-UB-qHf">
                                         <rect key="frame" x="4" y="4" width="345" height="72"/>
@@ -36,7 +36,7 @@
                                 </subviews>
                                 <color key="backgroundColor" name="Cell BG Base Grey"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="80" id="81R-lN-A0g"/>
+                                    <constraint firstAttribute="height" constant="102" id="81R-lN-A0g"/>
                                     <constraint firstAttribute="width" constant="353" id="yn9-Zk-YgG"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
@@ -60,8 +60,8 @@
                         </subviews>
                         <color key="backgroundColor" name="Base White"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="100" id="2tY-bS-KER"/>
-                            <constraint firstItem="BGx-be-Ie7" firstAttribute="centerY" secondItem="nZU-CV-UOM" secondAttribute="centerY" id="dIp-m1-rDv"/>
+                            <constraint firstAttribute="height" constant="120" id="2tY-bS-KER"/>
+                            <constraint firstItem="BGx-be-Ie7" firstAttribute="centerY" secondItem="nZU-CV-UOM" secondAttribute="centerY" constant="1" id="dIp-m1-rDv"/>
                             <constraint firstItem="BGx-be-Ie7" firstAttribute="centerX" secondItem="nZU-CV-UOM" secondAttribute="centerX" id="msS-9k-WQ7"/>
                         </constraints>
                     </view>
@@ -77,7 +77,7 @@
             <connections>
                 <outlet property="generalTV" destination="HDl-UB-qHf" id="HPS-Jh-ocE"/>
             </connections>
-            <point key="canvasLocation" x="52.671755725190835" y="98.591549295774655"/>
+            <point key="canvasLocation" x="52.671755725190835" y="105.63380281690141"/>
         </tableViewCell>
     </objects>
     <resources>
