--- a/Kismat App/Views/ViewControllers/ProfileSetup/Xibs/ProfileTVCell.xib
+++ b/Kismat App/Views/ViewControllers/ProfileSetup/Xibs/ProfileTVCell.xib
@@ -96,7 +96,7 @@
                                         <rect key="frame" x="3" y="4" width="84" height="52"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrowtriangle.down.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="zxc-Qc-EHG">
-                                                <rect key="frame" x="62.333333333333321" y="22.333333333333332" width="16.666666666666664" height="11.333333333333332"/>
+                                                <rect key="frame" x="62.333333333333321" y="22.333333333333332" width="16.666666666666664" height="11.333333333333346"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <color key="tintColor" name="BaseBlack"/>
                                                 <constraints>
@@ -156,7 +156,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </textField>
                                 </subviews>
-                                <color key="backgroundColor" name="Cell BG Base Grey"/>
+                                <color key="backgroundColor" name="BG Base White"/>
                                 <constraints>
                                     <constraint firstItem="Q1R-JI-kC4" firstAttribute="leading" secondItem="lEa-z3-zuD" secondAttribute="trailing" constant="13" id="1qE-G5-vze"/>
                                     <constraint firstItem="lEa-z3-zuD" firstAttribute="leading" secondItem="3BS-oW-ABa" secondAttribute="trailing" constant="5" id="40T-le-B97"/>
@@ -210,7 +210,7 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
-                <outlet property="countryPickerView" destination="4Is-bo-0PU" id="LkP-xw-PVs"/>
+                <outlet property="countryPickerView" destination="4Is-bo-0PU" id="Dpu-Mg-y8O"/>
                 <outlet property="generalTF" destination="oPc-B4-0kB" id="Qcc-AV-qvd"/>
                 <outlet property="generalTFView" destination="4ET-CA-03u" id="hpo-7q-nSl"/>
                 <outlet property="imageIconIV" destination="jqp-cK-Gva" id="EKm-TR-WT5"/>
@@ -222,16 +222,19 @@
     </objects>
     <designables>
         <designable name="lEa-z3-zuD">
-            <size key="intrinsicContentSize" width="26" height="13.666666666666666"/>
+            <size key="intrinsicContentSize" width="52.333333333333336" height="17"/>
         </designable>
         <designable name="oPc-B4-0kB">
-            <size key="intrinsicContentSize" width="26" height="13.666666666666666"/>
+            <size key="intrinsicContentSize" width="52.333333333333336" height="17"/>
         </designable>
     </designables>
     <resources>
         <image name="arrowtriangle.down.fill" catalog="system" width="128" height="120"/>
         <image name="lock_icon" width="42" height="51"/>
         <image name="tooltip_icon" width="48" height="48"/>
+        <namedColor name="BG Base White">
+            <color red="0.9570000171661377" green="0.9570000171661377" blue="0.9570000171661377" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="Base White">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
